[gd_scene load_steps=4 format=3 uid="uid://gxwt31phhsyn"]

[ext_resource type="Script" path="res://Scenes/Entities/Projectiles/magic_ball/magic_ball.gd" id="1_4lbpf"]
[ext_resource type="Texture2D" uid="uid://cki8cdpm3f7l6" path="res://Scenes/Entities/Projectiles/magic_ball/portal.png" id="2_n46yl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_15qyj"]
radius = 7.0

[node name="Bullet" type="Node2D"]
z_index = 2
script = ExtResource("1_4lbpf")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_n46yl")

[node name="DamageCollider" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageCollider"]
shape = SubResource("CircleShape2D_15qyj")

[node name="LifetimeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_shape_entered" from="DamageCollider" to="." method="_on_damage_collider_body_shape_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
